sampler/chain/projects/zuul/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/zuul/zuul-core/src/main/java/com/netflix/zuul/filters/endpoint/ProxyEndpoint.java:554: error: [NullAway] (INDEX= 88) (Covered) returning @Nullable expression from method with @NonNull return type
            return null;
            ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/zuul/zuul-core/src/main/java/com/netflix/zuul/passport/CurrentPassport.java:444: error: [NullAway] (INDEX= 203) (Covered) returning @Nullable expression from method with @NonNull return type
        return passport;
        ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/zuul/zuul-core/src/main/java/com/netflix/zuul/netty/connectionpool/DefaultClientChannelManager.java:440: error: [NullAway] (INDEX= 163) (Covered) passing @Nullable parameter 'null' where @NonNull is required
                    /* statusPageUrl= */ null,
                                         ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/zuul/zuul-core/src/main/java/com/netflix/netty/common/accesslog/AccessLogChannelHandler.java:126: error: [NullAway] (INDEX= 0) (Covered) @NonNull field AccessLogChannelHandler$RequestState.request not initialized
        HttpRequest request;
                    ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/zuul/zuul-core/src/main/java/com/netflix/netty/common/accesslog/AccessLogChannelHandler.java:126: error: [NullAway] (INDEX= 0) (Covered) @NonNull field AccessLogChannelHandler$RequestState.request not initialized
        HttpRequest request;
                    ^
	(see http://t.uber.com/nullaway )
